cmake_minimum_required(VERSION 3.26)
project(TestandoCoisas)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(TestandoCoisas
        Ambunave.h
        Colosso.h
        CruzadorDeBatalha.h
        Devoradora.h
        Empalador.h
        Endiabrado.h
        Fanaticus.h
        Fila.h
        Guerreiro.h
        Guerreiro.cpp
        Infestador.h
        main.cpp
        Mecanico.h
        MestreDasCastas.h
        Naga.h
        Object.h
        Organico.h
        Proton.h
        Random.h
        Servo.h
        Soldado.h
        Tatu-Bomba.h
        Terrano.h
        Tormento.h
        Transportadora.h
        Zerg.h
        Zerguinideo.h
        lado1.txt
        lado2.txt
        Guerreiro.cpp
)
